<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginHorizontal="56dp"
        android:background="@android:color/holo_blue_light"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_debug"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/debug_log" />

    <Button
        android:id="@+id/btn_error"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/error_log" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/info_log" />

    <Button
        android:id="@+id/btn_warning"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/warning_log" />

    <Button
        android:id="@+id/btn_verbose"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/verbose_log" />

</LinearLayout>